core/tests/integration/typecheck/fail/primitive_mismatch_number_bool.ncl
# test.type = 'error'
# eval = 'typecheck'
# 
# [test.metadata]
# error = 'TypecheckError::TypeMismatch'
#
# [test.metadata.expectation]
# expected = 'Bool'
# inferred = 'Number'
34.5 : Bool
